# jax_pchip

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: api.rst  conf.py  generate_figures.py  index.rst
jax_pchip/: __init__.py  _core.py
tests/: test_pchip.py
