[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-pchip"
version = "0.1.0"
description = "JAX-compatible PCHIP monotone cubic interpolation"
requires-python = ">=3.10"
dependencies = ["jax>=0.4", "numpy"]

[project.optional-dependencies]
test = ["pytest", "scipy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["jax_pchip*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
