[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-pchip"
version = "0.1.0"
description = "JAX-compatible PCHIP monotone cubic interpolation"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Peter Smith", email = "smith.peter.902@gmail.com"}]
requires-python = ">=3.10"
dependencies = ["jax>=0.4", "numpy"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/pjs902/jax_pchip"
Repository = "https://github.com/pjs902/jax_pchip"
Documentation = "https://jax-pchip.readthedocs.io"

[project.optional-dependencies]
test = ["pytest", "scipy"]
docs = ["sphinx", "furo"]

[tool.setuptools.packages.find]
where = ["."]
include = ["jax_pchip*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
